--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,33 @@
-/node_modules
+# Node.js dependencies
+node_modules/
+package-lock.json
+
+# Jest cache and coverage reports
+coverage/
+.jest/
+
+# Babel cache
+.babelrc
+
+# Logs and debug files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor and OS-specific files
+.DS_Store
+.vscode/
+.idea/
+Thumbs.db
+
+# Build artifacts
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+.env.test
