--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "task-pilot",
   "version": "1.0.0",
   "description": "TaskPilot is a simple, lightweight task management app built with **JavaScript/TypeScript, HTML, CSS/SCSS, and Bootstrap**. It helps users organize their tasks efficiently with a clean and interactive UI.",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "directories": {
     "test": "tests"
   },
   "scripts": {
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --mode development",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -22,6 +25,8 @@
   },
   "homepage": "https://github.com/Nqobile-Buthelezi/task-pilot#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
   }
 }
