--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "@babel/preset-env": "^7.26.9",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "playwright": "^1.51.1"
   }
 }
