--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "task-pilot",
   "version": "1.0.0",
-  "description": "TaskPilot is a simple, lightweight task management app built with **JavaScript/TypeScript, HTML, CSS/SCSS, and Bootstrap**. It helps users organize their tasks efficiently with a clean and interactive UI.",
+  "description": "TaskPilot is a simple, lightweight task management app built with **JavaScript, HTML, CSS/SCSS, and Bootstrap**. It helps users organize their tasks efficiently with a clean and interactive UI.",
   "main": "app.js",
   "type": "module",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack-dev-server --mode development",
-    "test": "jest",
-    "test:watch": "jest --watch"
+  "build": "webpack --mode production",
+  "dev": "webpack-dev-server --mode development",
+  "test": "jest",
+  "test:watch": "jest --watch",
+  "test:e2e": "cucumber-js --config tests/cucumber.cjs",
+  "pretest:e2e": "webdriver-manager update",
+  "test:all": "node tests/run-all-tests.cjs"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nqobile-Buthelezi/task-pilot.git"
+    "url": "https://github.com/Nqobile-Buthelezi/task-pilot.git"
   },
   "keywords": [],
   "author": "Nqobile Buthelezi",
@@ -26,10 +29,13 @@
   "homepage": "https://github.com/Nqobile-Buthelezi/task-pilot#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
+    "@cucumber/pretty-formatter": "^1.0.1",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
-  },
-  "dependencies": {
-    "playwright": "^1.51.1"
+    "chai": "^4.3.7",
+    "cucumber": "^6.0.7",
+    "cucumber-pretty": "^6.0.1",
+    "jest": "^29.7.0",
+    "selenium-webdriver": "^4.31.0",
+    "webdriver-manager": "^12.1.9"
   }
 }
