--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "task-pilot",
   "version": "1.0.0",
-  "description": "TaskPilot is a simple, lightweight task management app built with **JavaScript, HTML, CSS/SCSS, and Bootstrap**. It helps users organize their tasks efficiently with a clean and interactive UI.",
+  "description": "TaskPilot is a simple, lightweight task management app built with **JavaScript, HTML, CSS/SCSS, and Bootstrap**. It helps users organise their tasks efficiently with a clean and interactive UI.",
   "main": "app.js",
   "type": "module",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-  "build": "webpack --mode production",
-  "dev": "webpack-dev-server --mode development",
-  "test": "jest",
-  "test:watch": "jest --watch",
-  "test:e2e": "cucumber-js --config tests/cucumber.cjs",
-  "pretest:e2e": "webdriver-manager update",
-  "test:all": "node tests/run-all-tests.cjs"
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --mode development",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:e2e": "cucumber-js --config tests/cucumber.cjs",
+    "pretest:e2e": "webdriver-manager update",
+    "test:all": "node tests/run-all-tests.cjs",
+    "start": "serve src/"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "cucumber-pretty": "^6.0.1",
     "jest": "^29.7.0",
     "selenium-webdriver": "^4.31.0",
+    "serve": "^14.2.4",
     "webdriver-manager": "^12.1.9"
   }
 }
